--- a/samples.html
+++ b/samples.html
@@ -33,7 +33,7 @@
                     <tr>
                         <th id="linear-algebra">Linear Algebra</th>
                         <td>
-                            <p>A First Course in Linear Algebra, available in its canonical version at <a href="http://linear.ups.edu">http://linear.ups.edu</a>. This sample contains substantive amounts of MathML.</p>
+                            A First Course in Linear Algebra, available in its canonical version at <a href="http://linear.ups.edu">http://linear.ups.edu</a>. This sample contains substantive amounts of MathML.
                             <p>Licensing: <a href="http://www.gnu.org/copyleft/fdl.html">GNU FDL 1.2</a></p>
                         </td>
                         <td>2015-01-15</td>
@@ -58,7 +58,7 @@
                     <tr>
                         <th id="english-lang-gcse-aqa">English Language GCSE for AQA: Student Book</th>
                         <td>
-                            <p>(Coming soon.)</p>
+                            (Coming soon.)
                             <p>Licensing: <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International (CC BY-NC-ND 4.0)</a></p>
                         </td>
                         <td>2015-06-04</td>
@@ -72,7 +72,7 @@
                     <tr>
                         <th id="english-lit-aqa">GCSE English Literature for AQA: Poetry Student Book</th>
                         <td>
-                            <p>(Coming soon.)</p>
+                            (Coming soon.)
                             <p>Licensing: <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International (CC BY-NC-ND 4.0)</a></p>
                         </td>
                         <td>2015-06-04</td>
@@ -86,7 +86,7 @@
                     <tr>
                         <th id="wcag">World Cultures and Geography</th>
                         <td>
-                            <p>Sample chapter from a typical K-12 textbook.</p>
+                            Sample chapter from a typical K-12 textbook.
                             <p>Licensing: See the <a href="https://github.com/IDPF/edupub/blob/master/samples/WCAG-ch1/EPUB/package.opf">package file</a> for usage restrictions.</p>
                         </td>
                         <td>2015-06-04</td>
