update sample list

--- a/samples.html
+++ b/samples.html
@@ -44,15 +44,15 @@
                     <tr>
                         <th id="english-lang-gcse-aqa">English Language GCSE for AQA: Student Book</th>
                         <td>
-                            (Coming soon.)
+                            This sample from Cambridge University Press features rich video content and interactive questions.
                             <p>Licensing: <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International (CC BY-NC-ND 4.0)</a></p>
                         </td>
-                        <td>2015-06-04</td>
+                        <td>2015-06-12</td>
                         <td>
-                            <a href="https://drive.google.com/uc?export=download&amp;id=">EPUB 3.0</a>
+                            <a href="https://drive.google.com/uc?export=download&amp;id=0B9g8D2Y-6aPLVXp5S25XUEJZRk0">EPUB 3.0</a>
                         </td>
                         <td>
-                            <a href="https://github.com/IDPF/edupub/tree/master/samples/">Browse</a>
+                            <a href="https://github.com/IDPF/edupub/tree/master/samples/English-Language-GCSE-for-AQA">Browse</a>
                         </td>
                     </tr>
                     <tr>
