--- a/samples/WCAG-ch1/EPUB/xhtml/WCAG-ch1-2.xhtml
+++ b/samples/WCAG-ch1/EPUB/xhtml/WCAG-ch1-2.xhtml
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" type="text/css" href="../css/default.css" />
-        <title></title>
+        <title>Unit 1 - Introduction to World Cultures and Geography</title>
     </head>
     <body xmlns:epub="http://www.idpf.org/2007/ops" epub:type="bodymatter">
         <section epub:type="part" class="unit" id="d18656e63">
@@ -487,7 +487,7 @@
                             their way of life.</p>
                     </section>
                     <section epub:type="assessment" class="subsection" id="d18656e570">
-                        <h4 id="d20258e527-0" class="subsection uc">Saction 1 Assessment</h4>
+                        <h4 id="d20258e527-0" class="subsection uc">Section 1 Assessment</h4>
                         <p epub:type="bridgehead">Terms &amp; Names</p>
                         <p>1. Identify:</p>
                         <ol class="loweralpha">
