add link to master zip

--- a/samples.html
+++ b/samples.html
@@ -18,7 +18,8 @@
             </header>
             <section>
                 <h2 id="samples">Samples Table</h2>
-                <p>The EDUPUB samples are also available for individual download from <a href="https://drive.google.com/open?id=0B9g8D2Y-6aPLflIyZE50Um50cG5BNkZSQ2NqcVhtUlZJSGRoVWhla3ktZ2JQdDJjdFNyZlk">Google Drive</a>.</p>
+                <p>The EDUPUB samples are also available for individual download from <a href="https://drive.google.com/open?id=0B9g8D2Y-6aPLflIyZE50Um50cG5BNkZSQ2NqcVhtUlZJSGRoVWhla3ktZ2JQdDJjdFNyZlk">Google Drive</a>.
+                    The source files for all samples can also be downloaded as a single <a href="https://github.com/IDPF/edupub/archive/master.zip">zip archive</a>.</p>
                 <p>
                     <i>Unless otherwise specified, all samples listed here are licensed under <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA 3.0</a></i>
                 </p>
