--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         facilitate testing in reading systems. The expanded source is maintained in the EDUPUB Samples'
                         <a href="https://www.github.com/IDPF/edupub">github repository</a>, while individual downloads
                         are available from <a href="https://drive.google.com/open?id=0B9g8D2Y-6aPLflIyZE50Um50cG5BNkZSQ2NqcVhtUlZJSGRoVWhla3ktZ2JQdDJjdFNyZlk">Google Drive</a>.</p>
+                    <p>The source files for all samples can also be downloaded as a single <a href="https://github.com/IDPF/edupub/archive/master.zip">zip archive</a>.</p>
                 </section>
                 <section>
                     <h3>Feature Matrix</h3>
