minor wording changes

--- a/index.html
+++ b/index.html
@@ -33,15 +33,10 @@
                     <p>A feature matrix will be added soon.</p>
                 </section>
                 <section>
-                    <h3>EPUB 3 Samples</h3>
-                    <p>Please see the <a href="http://idpf.github.io/epub3-samples/">EPUB 3 Samples project</a> for general
-                        EPUB 3 sample content.</p>
-                </section>
-                <section>
                     <h3>EPUB Test Suite</h3>
-                    <p>This project provides samples for general testing of content. Please see the 
-                        <a href="https://www.github.com/IDPF/epub-testsuite">EPUB test suite</a> for a more comprehensive
-                        set of publications. The test suite publications are used to generate the results posted to
+                    <p>This project provides samples for general review EDUPUB-conformant content. Please see the 
+                        <a href="https://www.github.com/IDPF/epub-testsuite">EPUB test suite</a> for the 
+                        publications used to generate the results posted to
                         <a href="http://www.epubtest.org">http://www.epubtest.org</a>.</p>
                 </section>
             </section>
