--- a/samples.html
+++ b/samples.html
@@ -9,7 +9,7 @@
     <body>
         <section>
             <header>
-                <h1 id="site-name">
+                <h1 id="site-name" class="right">
                     <a href="http://www.idpf.org" title="Home" rel="home"><span>International Digital Publishing Forum: The Trade and Standards Organization for the Digital Publishing Industry</span></a>
                 </h1>
                 <div class="breadcrumb">
