added second Cambridge sample

--- a/samples.html
+++ b/samples.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Samples | EDUPUB Samples Project</title>
+        <title>EDUPUB Samples | EDUPUB Samples Project</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="css/idpf.css" />
         <link rel="stylesheet" type="text/css" href="css/samples.css" />
@@ -17,7 +17,7 @@
                 </div>
             </header>
             <section>
-                <h2 id="samples">Samples Table</h2>
+                <h2 id="samples">EDUPUB Samples</h2>
                 <p>
                     <i>Unless otherwise specified, all samples listed here are licensed under <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA 3.0</a></i>
                 </p>
@@ -57,15 +57,15 @@
                     <tr>
                         <th id="english-lit-aqa">GCSE English Literature for AQA: Poetry Student Book</th>
                         <td>
-                            (Coming soon.)
+                            This sample from Cambridge University Press features poetry, audio content and practice questions.
                             <p>Licensing: <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International (CC BY-NC-ND 4.0)</a></p>
                         </td>
-                        <td>2015-06-04</td>
+                        <td>2015-07-16</td>
                         <td>
-                            <a href="https://drive.google.com/uc?export=download&amp;id=">EPUB 3.0</a>
+                            <a href="https://drive.google.com/uc?export=download&amp;id=0B9g8D2Y-6aPLWGVzZ1IycXBQUXM">EPUB 3.0</a>
                         </td>
                         <td>
-                            <a href="https://github.com/IDPF/edupub/tree/master/samples/">Browse</a>
+                            <a href="https://github.com/IDPF/edupub/tree/master/samples/English-Literature-GCSE-for-AQA">Browse</a>
                         </td>
                     </tr>
                     <tr>
