updated appendix to meet idx spec requirements

--- a/samples/linear-algebra/EPUB/content/114_Index.xhtml
+++ b/samples/linear-algebra/EPUB/content/114_Index.xhtml
@@ -10372,9 +10372,8 @@
                      </ul>
                   </li>
                   <li>
-                     <span epub:type="index-term">notation, 
-                        <a epub:type="index-locator" href="042_Section_D_Dimension.xhtml#dx42-183005">1889</a>
-                     </span>, 
+                     <span epub:type="index-term">notation</span>, 
+                     <a epub:type="index-locator" href="042_Section_D_Dimension.xhtml#dx42-183005">1889</a>, 
                      <a epub:type="index-locator" href="055_Section_IVLT_Invertible_Linear_Transformations.xhtml#dx55-268011">1890</a>
                   </li>
                   <li>
@@ -11291,9 +11290,8 @@
                      </ul>
                   </li>
                   <li>
-                     <span epub:type="index-term">notation, 
-                        <a epub:type="index-locator" href="042_Section_D_Dimension.xhtml#dx42-183011">2054</a>
-                     </span>, 
+                     <span epub:type="index-term">notation</span>, 
+                     <a epub:type="index-locator" href="042_Section_D_Dimension.xhtml#dx42-183011">2054</a>,
                      <a epub:type="index-locator" href="055_Section_IVLT_Invertible_Linear_Transformations.xhtml#dx55-268005">2055</a>
                   </li>
                   <li>
@@ -11754,9 +11752,8 @@
                      <a epub:type="index-locator" href="019_Section_RREF_Reduced_Row-Echelon_Form.xhtml#dx19-36002">2148</a>
                   </li>
                   <li>
-                     <span epub:type="index-term">elementary matrices, 
-                        <a epub:type="index-locator" href="045_Section_DM_Determinant_of_a_Matrix.xhtml#dx45-198017">2149</a>
-                     </span>, 
+                     <span epub:type="index-term">elementary matrices</span>, 
+                     <a epub:type="index-locator" href="045_Section_DM_Determinant_of_a_Matrix.xhtml#dx45-198017">2149</a>,
                      <a epub:type="index-locator" href="045_Section_DM_Determinant_of_a_Matrix.xhtml#dx45-198021">2150</a>
                   </li>
                   <li>
@@ -15118,9 +15115,8 @@
                      </ul>
                   </li>
                   <li>
-                     <span epub:type="index-term">matrix inverse, 
-                        <a epub:type="index-locator" href="033_Section_MISLE_Matrix_Inverses_and_Systems_of_Linear_Equations.xhtml#dx33-123013">2827</a>
-                     </span>, 
+                     <span epub:type="index-term">matrix inverse</span>, 
+                     <a epub:type="index-locator" href="033_Section_MISLE_Matrix_Inverses_and_Systems_of_Linear_Equations.xhtml#dx33-123013">2827</a>,
                      <a epub:type="index-locator" href="033_Section_MISLE_Matrix_Inverses_and_Systems_of_Linear_Equations.xhtml#dx33-123017">2828</a>
                   </li>
                   <li>
@@ -15609,9 +15605,8 @@
                      </ul>
                   </li>
                   <li>
-                     <span epub:type="index-term">product with matrix, 
-                        <a epub:type="index-locator" href="032_Section_MM_Matrix_Multiplication.xhtml#dx32-112005">2899</a>
-                     </span>, 
+                     <span epub:type="index-term">product with matrix</span>, 
+                     <a epub:type="index-locator" href="032_Section_MM_Matrix_Multiplication.xhtml#dx32-112005">2899</a>,
                      <a epub:type="index-locator" href="032_Section_MM_Matrix_Multiplication.xhtml#dx32-113005">2900</a>
                   </li>
                   <li>
