update "edupub" to EPUB for Education

--- a/feature-matrix.html
+++ b/feature-matrix.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>Feature Matrix | EDUPUB Samples Project</title>
+        <title>Feature Matrix | EPUB for Education Samples Project</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="css/idpf.css" />
         <link rel="stylesheet" type="text/css" href="css/samples.css" />
