--- a/samples.html
+++ b/samples.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>EDUPUB Samples | EDUPUB Samples Project</title>
+        <title>Samples | EPUB for Education Samples Project</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="css/idpf.css" />
         <link rel="stylesheet" type="text/css" href="css/samples.css" />
@@ -17,7 +17,7 @@
                 </div>
             </header>
             <section>
-                <h2 id="samples">EDUPUB Samples</h2>
+                <h2 id="samples">EPUB for Education Samples</h2>
                 <p>
                     <i>Unless otherwise specified, all samples listed here are licensed under <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA 3.0</a></i>
                 </p>
@@ -30,14 +30,14 @@
                         <th class="s5">Source</th>
                     </tr>
                     <tr>
-                        <th id="structure">EDUPUB Structure Sample</th>
-                        <td>An instructive sample designed to show the structural markup patterns defined in the <a href="http://www.idpf.org/epub/profiles/edu/structure/">EDUPUB Structural Semantics vocabulary</a>, as well as the application of the <a href="http://www.idpf.org/epub/profiles/edu/res/sample.css">sample CSS</a>. (Note: this sample is composed primarily of lorem ipsum text.)</td>
+                        <th id="structure">EPUB for Education Structure Sample</th>
+                        <td>An instructive sample designed to show the structural markup patterns defined in the <a href="http://www.idpf.org/epub/profiles/edu/structure/">Education Structural Semantics vocabulary</a>, as well as the application of the <a href="http://www.idpf.org/epub/profiles/edu/res/sample.css">sample CSS</a>. (Note: this sample is composed primarily of lorem ipsum text.)</td>
                         <td>2015-06-15</td>
                         <td>
                             <a href="https://drive.google.com/uc?export=download&amp;id=0B9g8D2Y-6aPLd2FiMExCbXdVRUU">EPUB 3.0</a>
                         </td>
                         <td>
-                            <a href="https://github.com/IDPF/edupub/tree/master/samples/structure-sample-01">Browse</a>
+                            <a href="https://github.com/IDPF/education/tree/master/samples/structure-sample-01">Browse</a>
                         </td>
                     </tr>
                     <tr>
@@ -51,7 +51,7 @@
                             <a href="https://drive.google.com/uc?export=download&amp;id=0B9g8D2Y-6aPLVXp5S25XUEJZRk0">EPUB 3.0</a>
                         </td>
                         <td>
-                            <a href="https://github.com/IDPF/edupub/tree/master/samples/English-Language-GCSE-for-AQA">Browse</a>
+                            <a href="https://github.com/IDPF/education/tree/master/samples/English-Language-GCSE-for-AQA">Browse</a>
                         </td>
                     </tr>
                     <tr>
@@ -65,7 +65,7 @@
                             <a href="https://drive.google.com/uc?export=download&amp;id=0B9g8D2Y-6aPLWGVzZ1IycXBQUXM">EPUB 3.0</a>
                         </td>
                         <td>
-                            <a href="https://github.com/IDPF/edupub/tree/master/samples/English-Literature-GCSE-for-AQA">Browse</a>
+                            <a href="https://github.com/IDPF/education/tree/master/samples/English-Literature-GCSE-for-AQA">Browse</a>
                         </td>
                     </tr>
                     <tr>
@@ -79,21 +79,21 @@
                             <a href="https://drive.google.com/uc?export=download&amp;id=0B9g8D2Y-6aPLeHBQRHhZSXZEVzg">EPUB 3.0</a>
                         </td>
                         <td>
-                            <a href="https://github.com/IDPF/edupub/tree/master/samples/linear-algebra">Browse</a>
+                            <a href="https://github.com/IDPF/education/tree/master/samples/linear-algebra">Browse</a>
                         </td>
                     </tr>
                     <tr>
                         <th id="wcag">World Cultures and Geography</th>
                         <td>
                             Sample chapter from a typical K-12 textbook.
-                            <p>Licensing: See the <a href="https://github.com/IDPF/edupub/blob/master/samples/WCAG-ch1/EPUB/package.opf">package file</a> for usage restrictions.</p>
+                            <p>Licensing: See the <a href="https://github.com/IDPF/education/blob/master/samples/WCAG-ch1/EPUB/package.opf">package file</a> for usage restrictions.</p>
                         </td>
                         <td>2015-06-15</td>
                         <td>
                             <a href="https://drive.google.com/uc?export=download&amp;id=0B9g8D2Y-6aPLeWtKeVVjMTRXNVE">EPUB 3.0</a>
                         </td>
                         <td>
-                            <a href="https://github.com/IDPF/edupub/tree/master/samples/WCAG-ch1">Browse</a>
+                            <a href="https://github.com/IDPF/education/tree/master/samples/WCAG-ch1">Browse</a>
                         </td>
                     </tr>
                 </table>
