--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>EDUPUB Samples Project</title>
+        <title>EPUB for Education Samples Project</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="css/idpf.css" />
         <link rel="stylesheet" type="text/css" href="css/samples.css" />
@@ -14,19 +14,19 @@
                 </h1>
             </header>
             <section>
-                <h2>EDUPUB Samples</h2>
-                <p>The EDUPUB Samples project provides a collection of EPUB 3 publications intended to showcase features of the 
-                    <a href="http://www.idpf.org/epub/profiles/edu/spec/">EDUPUB profile</a>, and to provide testing 
+                <h2>EPUB for Education Samples</h2>
+                <p>The EPUB for Education Samples project provides a collection of EPUB 3 publications intended to showcase features of the 
+                    <a href="http://www.idpf.org/epub/profiles/edu/spec/">EPUB for Education profile</a>, and to provide testing 
                     materials for reading system developers.</p>
                 <section>
                     <h3>Samples</h3>
                     <p>A <a href="samples.html">table of samples</a> is available that describes each publication and provides links
                         to obtain their source.</p>
                     <p>The samples are available in both expanded and packaged form to simplify the review of markup patterns and 
-                        facilitate testing in reading systems. The expanded source is maintained in the EDUPUB Samples'
-                        <a href="https://www.github.com/IDPF/edupub">github repository</a>, while individual downloads
+                        facilitate testing in reading systems. The expanded source is maintained in the EPUB for Education Samples'
+                        <a href="https://www.github.com/IDPF/education">github repository</a>, while individual downloads
                         are available from <a href="https://drive.google.com/open?id=0B9g8D2Y-6aPLflIyZE50Um50cG5BNkZSQ2NqcVhtUlZJSGRoVWhla3ktZ2JQdDJjdFNyZlk">Google Drive</a>.</p>
-                    <p>The source files for all samples can also be downloaded as a single <a href="https://github.com/IDPF/edupub/archive/master.zip">zip archive</a>.</p>
+                    <p>The source files for all samples can also be downloaded as a single <a href="https://github.com/IDPF/education/archive/master.zip">zip archive</a>.</p>
                 </section>
                 <section>
                     <h3>Feature Matrix</h3>
@@ -34,7 +34,7 @@
                 </section>
                 <section>
                     <h3>EPUB Test Suite</h3>
-                    <p>This project provides samples for general review EDUPUB-conformant content. Please see the 
+                    <p>This project provides samples for general review EPUB for Education-conformant content. Please see the 
                         <a href="https://www.github.com/IDPF/epub-testsuite">EPUB test suite</a> for the 
                         publications used to generate the results posted to
                         <a href="http://www.epubtest.org">http://www.epubtest.org</a>.</p>
